--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "opciones-sacimex",
   "version": "0.1.0",
-  "homepage": "https://web.opcionessacimex.com/",
+  "homepage": "/",
   "private": true,
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
@@ -9,7 +9,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "dompurify": "^3.0.6",
-    "googleapis": "^126.0.1",
     "intersection-observer": "^0.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,9 +21,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
